# agroconnect

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  CLAUDE.md  check_completeness.js  check_keys.js  dev-start.ps1  extract_keys.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/diagnosis-service/: .env.example  Dockerfile  Dockerfile.dev  Makefile  jest.config.js  package.json  pyproject.toml  requirements.txt
apps/diagnosis-service/proto/: diagnosis.proto
apps/diagnosis-service/scripts/: gen_proto.sh
apps/diagnosis-service/src/: config.py  config.ts  db.ts  diagnosis_pb2.py  diagnosis_pb2_grpc.py  grpc_server.py  index.ts  inference_service.py  kafka_consumer.py  logger.ts  main.py  prescription_service.py
apps/diagnosis-service/src/events/: consumer.py  consumer.ts  producer.py  producer.ts
apps/diagnosis-service/src/grpc/: converters.py  server.py
apps/diagnosis-service/src/inference/: engine.py  mock_engine.py  real_engine.py
apps/diagnosis-service/src/lib/: rateLimit.ts  redis.ts
apps/diagnosis-service/src/middleware/: errorHandler.ts
apps/diagnosis-service/src/models/: diagnosis.py  diagnosis.ts
apps/diagnosis-service/src/providers/: claude.ts  errorClassification.ts  googleVision.ts  index.ts  mock.ts  types.ts
apps/diagnosis-service/src/repositories/: diagnosisRepository.ts  diagnosis_repository.py
apps/diagnosis-service/src/rest/: router.py
apps/diagnosis-service/tests/: conftest.py  setup.ts  test_diagnosis_models.py  test_grpc_handler.py  test_mock_engine.py
docs/: api-contracts.md  (+12 more)
(+1125 files in other folders)
